force-app/main/default/objects/Contact/fields/Account_Segment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment_Contact__c</fullName>
    <formula>TEXT(Account.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment (Contact)</label>
    <type>Text</type>
</CustomField>