force-app/main/default/objects/Contact/fields/Contact_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Client_Status__c</fullName>
    <label>Contact Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Status</valueSetName>
    </valueSet>
</CustomField>