force-app/main/default/objects/Contact/fields/Contact_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Contact_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional: This is the external person that referred this contact. This is used for relationship reporting when contact are referred by people outside of Richey May.</description>
    <inlineHelpText>Optional: This is the external person that referred this contact. This is used for relationship reporting when contact are referred by people outside of Richey May.</inlineHelpText>
    <label>Contact Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>