force-app/main/default/objects/Contact/fields/Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email__c</fullName>
    <description>This removes the contact from all emails from sales and marketing at Richey May. THIS CANNOT BE UNDONE WITHOUT THE CLIENT OPTING BACK IN VIA EMAIL. If they request to opt back in, contact your Salesforce Admin.</description>
    <inlineHelpText>This removes the contact from all emails from sales and marketing at Richey May. THIS CANNOT BE UNDONE WITHOUT THE CLIENT OPTING BACK IN VIA EMAIL. If they request to opt back in, contact your Salesforce Admin.</inlineHelpText>
    <label>Do Not Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>