force-app/main/default/objects/Contact/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <description>This removes the contact from all physical mailing lists, including gifts and packages. THIS CANNOT BE UNDONE WITHOUT THE CLIENT OPTING BACK IN VIA EMAIL. If they request to opt back in, contact your Salesforce Admin.</description>
    <inlineHelpText>This removes the contact from all physical mailing lists, including gifts and packages. THIS CANNOT BE UNDONE WITHOUT THE CLIENT OPTING BACK IN VIA EMAIL. If they request to opt back in, contact your Salesforce Admin.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>