force-app/main/default/objects/Contact/fields/Do_Not_Phone__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Phone__c</fullName>
    <description>This removes the contact from all calls made about Richey May and our services or partners. THIS CANNOT BE UNDONE WITHOUT THE CLIENT OPTING BACK IN VIA EMAIL. If they request to opt back in, contact your Salesforce Admin.</description>
    <inlineHelpText>This removes the contact from all calls made about Richey May and our services or partners. THIS CANNOT BE UNDONE WITHOUT THE CLIENT OPTING BACK IN VIA EMAIL. If they request to opt back in, contact your Salesforce Admin.</inlineHelpText>
    <label>Do Not Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>