force-app/main/default/objects/Contact/fields/Drinks_Alcohol__c.field-meta.xml
<CustomField>
    <fullName>Drinks_Alcohol__c</fullName>
    <description>Select unknown if you aren&apos;t sure, you&apos;ll be asked by marketing to verify if you invite them to alcohol-related events.</description>
    <inlineHelpText>Select unknown if you aren&apos;t sure, you&apos;ll be asked by marketing to verify if you invite them to alcohol-related events.</inlineHelpText>
    <label>Drinks Alcohol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Temporary No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>