force-app/main/default/objects/Contact/fields/MS_Dyn_Contact_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Contact_Account_ID__c</fullName>
    <label>MS Dyn Contact Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>