force-app/main/default/objects/Contact/fields/MS_Dyn_Contact_Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Contact_Created_DateTime__c</fullName>
    <label>MS Dyn Contact Created DateTime</label>
    <type>DateTime</type>
</CustomField>