force-app/main/default/objects/Contact/fields/Ms_Dyn_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Ms_Dyn_Contact_ID__c</fullName>
    <description>Microsoft Dynamics Contact ID</description>
    <label>Ms Dyn Contact ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>