force-app/main/default/objects/Contact/fields/MS_Dyn_Contact_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Contact_Owner_ID__c</fullName>
    <description>MS Dynamics Contact Owner ID</description>
    <label>MS Dyn Contact Owner ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>