force-app/main/default/objects/Contact/fields/MS_Dyn_Contact_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Contact_Owner_Name__c</fullName>
    <description>Contact Owner name from MS Dynamics</description>
    <label>MS Dyn Contact Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>