force-app/main/default/objects/Contact/fields/MS_Dyn_User_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_User_Id__c</fullName>
    <description>User ID from microsoft dynamics</description>
    <inlineHelpText>User ID from microsoft dynamics</inlineHelpText>
    <label>MS Dyn User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>