force-app/main/default/objects/Contact/fields/RM_Employee_Active__c.field-meta.xml
<CustomField>
    <fullName>RM_Employee_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked means employee is active at Richey May. Unchecked means they no longer work at the firm.</description>
    <inlineHelpText>Checked means employee is active at Richey May. Unchecked means they no longer work at the firm.</inlineHelpText>
    <label>RM Employee Active</label>
    <type>Checkbox</type>
</CustomField>