force-app/main/default/objects/Contact/fields/RM_Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>RM_Staff_Id__c</fullName>
    <description>Richey May Staff Id from staff table in DOMO (for use of matching to CCH/Xero tables)</description>
    <inlineHelpText>Richey May Staff Id from staff table in DOMO (for use of matching to CCH/Xero tables)</inlineHelpText>
    <label>RM Staff Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>