force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This is the role standardization we use for marketing campaigns and reporting. Please choose the group that best fits the contact&apos;s job function and title. If you don&apos;t see a role that fits with your contact, contact your Salesforce Admin to have it added to the list.</description>
    <inlineHelpText>This is the role standardization we use for marketing campaigns and reporting. Please choose the group that best fits the contact&apos;s job function and title. If you don&apos;t see a role that fits with your contact, contact your Salesforce Admin to have it added to the list.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role</valueSetName>
    </valueSet>
</CustomField>