force-app/main/default/objects/Contact/recordTypes/AI_Client_Contact.recordType-meta.xml
<RecordType>
    <fullName>AI_Client_Contact</fullName>
    <active>true</active>
    <description>These contacts are related to an Alternative Investments Client</description>
    <label>AI Client Contact</label>
</RecordType>