force-app/main/default/objects/Contact/recordTypes/AI_Service_Provider_Contact.recordType-meta.xml
<RecordType>
    <fullName>AI_Service_Provider_Contact</fullName>
    <active>true</active>
    <description>Contacts related to AI Service Providers</description>
    <label>AI Service Provider Contact</label>
</RecordType>