force-app/main/default/objects/Contact/recordTypes/M_E_Contact.recordType-meta.xml
<RecordType>
    <fullName>M_E_Contact</fullName>
    <active>true</active>
    <description>This is a contact related to a Media &amp; Entertainment client</description>
    <label>M&amp;E Contact</label>
</RecordType>