force-app/main/default/objects/Contact/recordTypes/Mortgage_Bank_or_Credit_Union_Contact.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Bank_or_Credit_Union_Contact</fullName>
    <active>true</active>
    <description>Mortgage/Bank/CU Contact</description>
    <label>Mortgage, Bank or Credit Union Contact</label>
</RecordType>