force-app/main/default/objects/Contact/recordTypes/Mortgage_Service_Provider_Contact.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Service_Provider_Contact</fullName>
    <active>true</active>
    <description>Contacts related to Mortgage Service Providers</description>
    <label>Mortgage Service Provider Contact</label>
</RecordType>