force-app/main/default/objects/Contact/recordTypes/Other_Contact.recordType-meta.xml
<RecordType>
    <fullName>Other_Contact</fullName>
    <active>true</active>
    <description>Contacts that fall outside of Mtg/Bank/CU, AI, M&amp;E or Service Provider.</description>
    <label>Other Contact</label>
</RecordType>