force-app/main/default/objects/Contact/recordTypes/Richey_May_Employee.recordType-meta.xml
<RecordType>
    <fullName>Richey_May_Employee</fullName>
    <active>true</active>
    <description>Richey May Employees for attribution (originator) and billing (CCH/Xero) match. Admins enter only!</description>
    <label>Richey May Employee</label>
</RecordType>