force-app/main/default/objects/Contact/validationRules/Lock_Preferences_Set_True_Do_Not_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Preferences_Set_True_Do_Not_Email</fullName>
    <active>false</active>
    <description>Allows Users to set values for Do Not Email to True but only System Admins to</description>
    <errorConditionFormula>AND(OR($User.ProfileId &lt;&gt; &quot;00e5e000002rG8A&quot;,
$User.ProfileId &lt;&gt; &quot;00e5e0000013gsC&quot;),
TEXT(Do_Not_Email__c) = &quot;True&quot;)</errorConditionFormula>
    <errorDisplayField>Do_Not_Email__c</errorDisplayField>
    <errorMessage>Once This Value Is Set To True Only A System Administrator Can Update It.</errorMessage>
</ValidationRule>