force-app/main/default/objects/Contact/listViews/AI_Service_Providers.listView-meta.xml
<ListView>
    <fullName>AI_Service_Providers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AI_Service_Provider_Type__c</field>
        <operation>equals</operation>
        <value>Legal,Bank,Compliance,Consultant,Custodian,Fund Administrator,HR,Marketing,Not Entered,Outsourced CFO,Prime Broker,Recruiting,Valuation,Bookkeeper,Broker Dealer,Insurance,Technology</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AI_Service_Provider_Contact</value>
    </filters>
    <label>AI Service Providers</label>
    <sharedTo>
        <group>Alternative_Investments</group>
        <group>Marketing</group>
    </sharedTo>
</ListView>