force-app/main/default/objects/Contact/listViews/Owned_by_Seth.listView-meta.xml
<ListView>
    <fullName>Owned_by_Seth</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>scohen</value>
    </filters>
    <label>Owned by Seth</label>
</ListView>