force-app/main/default/objects/Contact/listViews/Owned_By_Steve.listView-meta.xml
<ListView>
    <fullName>Owned_By_Steve</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Drinks_Alcohol__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>svlasak</value>
    </filters>
    <label>Owned By Steve</label>
</ListView>